// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CadastroUsuario.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
/>
`;

exports[`CadastroUsuario.styles ContainerCabecalhoLista DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<ul
  className="c0"
/>
`;

exports[`CadastroUsuario.styles ContainerCadastarUsuario DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem 3.438rem;
}

<div
  className="c0"
/>
`;

exports[`CadastroUsuario.styles ContainerItem DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  list-style-type: none;
  padding: 0.5em 0;
  border-bottom: 1px solid #000000;
}

<li
  className="c0"
/>
`;

exports[`CadastroUsuario.styles ContainerListaUsuarios DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.5rem 3.438rem;
}

<div
  className="c0"
/>
`;

exports[`CadastroUsuario.styles Item DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.813rem;
  min-width: 0px;
}

<div
  className="c0"
/>
`;
